--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -628,6 +628,24 @@ label.alertMustBeSet{
     padding: 5px;
 }
 
+/* Enseignant Devoir */
+.tableCopies .btn{
+    padding: 5px 10px;
+}
+.inversedBtn{
+    color: #44B144;
+    background-color: #f7f7f7;
+}
+.copieNote{
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 600;
+}
+.copieNoteEdit{
+    width: 50px;
+}
+
 
 /* documents */
 .documentsDisc:not([data-activated="1"]) .course-media,
