--- a/app/Resources/views/cours/adminDevoir.html.twig
+++ b/app/Resources/views/cours/adminDevoir.html.twig
@@ -122,7 +122,19 @@
                 </div>
 
             </div>
+        </div>
+        <hr class="hrCourseElem" />
+        <div>
+            <div class="LabelAdmin col-sm-3">Barême</div>
+            <div class="col-sm-9  col-xs-12 noPadding">
+                <div class="row noMargin">
+                    <div class="col-sm-4" data-champName="bareme">
+                        <input class="form-control bootstrapNumber" data-type="baremeSelect" type="number" value="{{ devoir.bareme }}" min="0" max="100" readonly />
+                    </div>
+                    <div class="col-sm-8">nombre de points maximum</div>
+                </div>
 
+            </div>
         </div>
         <hr class="hrCourseElem" />
         <div class="row">
