--- a/app/Resources/views/ressources/oneDevoirEns.html.twig
+++ b/app/Resources/views/ressources/oneDevoirEns.html.twig
@@ -155,7 +155,8 @@
                                 currentUrl: window.location.pathname
                             },
                             success: function (data) {
-                                window.location.href = window.location.href;
+                                console.log(data);
+                                //window.location.href = window.location.href;
                             },
                             error: function(xhr, status, error) {
                             }
