--- a/app/Resources/views/ressources/oneDevoirEns.html.twig
+++ b/app/Resources/views/ressources/oneDevoirEns.html.twig
@@ -171,8 +171,7 @@
                                 currentUrl: window.location.pathname
                             },
                             success: function (data) {
-                                console.log(data);
-                                //window.location.href = window.location.href;
+                                window.location.href = window.location.href;
                             },
                             error: function(xhr, status, error) {
                             }
