Permettre aux correcteur de

--- a/app/Resources/views/ressources/oneDevoirEns.html.twig
+++ b/app/Resources/views/ressources/oneDevoirEns.html.twig
@@ -233,8 +233,8 @@
                 var tr = $(this).closest('tr');
                 var copieId = tr.attr('data-copieId');
                 var span = tr.find('.copieAssocCorrecteur');
-                span.removeClass('hidden');
                 var myBtn = $(this);
+                var btnCancel = tr.find('.btnCancelAssocCorrecteur');
 
                 $.ajax({
                     type: 'POST',
@@ -247,7 +247,33 @@
                     success: function (data) {
                         span.text('Le '+data['date']+' par '+ data['correcteur']);
                         span.removeClass('hidden');
+                        btnCancel.removeClass('hidden');
                         myBtn.addClass('hidden');
+                    },
+                    error: function (xhr, status, error) {
+                    }
+                });
+            });
+            $('.btnCancelAssocCorrecteur').click(function(){
+                var btnCancel = $(this);
+                var tr = $(this).closest('tr');
+                var copieId = tr.attr('data-copieId');
+                var span = tr.find('.copieAssocCorrecteur');
+                var myBtn = tr.find('.btnValidAssocCorrecteur');
+
+                $.ajax({
+                    type: 'POST',
+                    url: "{{ path('desassocCorrecteurCopie_ajax') }}",
+                    async: false,
+                    dataType: "json",
+                    data: {
+                        copieId: copieId
+                    },
+                    success: function (data) {
+                        span.text('');
+                        span.addClass('hidden');
+                        btnCancel.addClass('hidden');
+                        myBtn.removeClass('hidden');
                     },
                     error: function (xhr, status, error) {
                     }
@@ -335,12 +361,17 @@
                                             </div>
                                         {% endif %}
                                     </td>
-                                    <td>
+                                    <td class="celluleAssocCorCopie">
                                         {% if not val.copie.assocCorrecteur %}
                                             <a class="btn btnValidAssocCorrecteur inversedBtn btn-success btn-sm" ><i class="fa fa-check fa-2x"></i></a>
                                             <span class="copieAssocCorrecteur hidden"></span>
+                                            <div class="btnCancelAssocCorrecteur hidden">x</div>
                                         {% else %}
+                                            <a class="btn btnValidAssocCorrecteur inversedBtn btn-success btn-sm hidden" ><i class="fa fa-check fa-2x"></i></a>
                                             <span class="copieAssocCorrecteur">Le {{ val.copie.assocCorrecteur.createdAt|localizeddate('none', 'none', 'fr', null, 'dd/MM/Y à H:mm' ) }} par {{ val.copie.assocCorrecteur.correcteur }}</span>
+                                            {% if app.user.hasRole('ROLE_SUPER_ADMIN') or val.copie.assocCorrecteur.correcteur.id == app.user.id %}
+                                                <div class="btnCancelAssocCorrecteur">x</div>
+                                            {% endif %}
                                         {% endif %}
                                     </td>
                                     <td>
