--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -645,6 +645,30 @@ label.alertMustBeSet{
 .copieNoteEdit{
     width: 50px;
 }
+td.celluleAssocCorCopie{
+    position: relative;
+    background: #eee;
+}
+.btnCancelAssocCorrecteur{
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    text-align: center;
+    padding: 5px;
+    border-radius: 20px;
+    color: #fff;
+    background-color: #b80505;
+    border: 3px solid #fff;
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+    line-height: 9px;
+}
+.btnCancelAssocCorrecteur:hover{
+    color: #b80505;
+    background-color: #fff;
+    border-color: #b80505;
+}
 
 
 /* documents */
